add get all swagger
