# sesi2/latihan1/docs/swagger.json
@@ -42,6 +42,27 @@
             }
         },
         "/todos": {
+            "get": {
+                "description": "get all todos",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "TODOS"
+                ],
+                "summary": "Get All TODOS",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/views.GetTodosSuccessSwag"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "create todo",
                 "consumes": [
@@ -56,7 +77,7 @@
                 "summary": "Create TODO",
                 "parameters": [
                     {
-                        "description": "Account ID",
+                        "description": "Request Body",
                         "name": "request",
                         "in": "body",
                         "required": true,
@@ -128,6 +149,45 @@
                 },
                 "payload": {
                     "$ref": "#/definitions/views.CreateTodoPayload"
+                },
+                "status": {
+                    "type": "integer",
+                    "example": 201
+                }
+            }
+        },
+        "views.GetTodoPayload": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string",
+                    "example": "Desc TODO"
+                },
+                "id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "title": {
+                    "type": "string",
+                    "example": "Title TODO"
+                }
+            }
+        },
+        "views.GetTodosSuccessSwag": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "CREATE TODO SUCCESS"
+                },
+                "payload": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/views.GetTodoPayload"
+                    }
                 },
                 "status": {
                     "type": "integer",
